    
    o Added new default method for confidenceEllipse(), which now can construct confidence ellipses for linear functions of coefficients.
    
    o globalVariables() called for R 2.15.1 or later.
    
    o Fixed bug in logit() when percents=TRUE and largest percent is 1 (reported by Eric Goodwin).
    

Changes to Version 2.0-12

    o modified compareCoefs to support any S4 object with that responds to the 'coefs' and 'vcov' methods (suggestion of David Hugh-Jones).

    o fixed bug in deltaMethod.surveg and deltaMethod.coxph to all use of the 'parameterNames' argument.

	o compareCoefs:  added an argument 'print' to suppress printing output.  Added support for 'lme' objects.
	
	o fixed xlab, ylab arguments and added dfn argument to confidenceEllipse() (suggestions of Michael Friendly).
	
	o moved survival from Depends to Suggests (request of Michael Friendly); added survey to Suggests.
	
	o added Anova.svyglm and linearHypothesis.svyglm.
	
	o fixed bug in linearHypothesis() that affected printing of some hypotheses (reported by Arne Henningsen).
	
	o fixed bug in Anova() for GLMs when F-test used with na.exclude.
	
	o package now byte-compiled.

Changes to Version 2.0-11

  	o the arguments to deltaMethod have changed, with parameterPrefix replaced by parameterNames.  See documentation for useage.
  
  	o deltaMethod methods for lmList, nlsList, and mer objects have been added.  The syntax for the multinom method has been improved.

  	o the 'layout' argument is used in several graphical functions to determine the layout of multiple graphs within the same graphical window.  Setting layout=NA in these functions suppresses this behavior and the user can set the layout outside the function (suggested by Steve Milborrow)

	o compareCoefs() works with 'mer' objects created by lme4
  
  	o  avPlot() now will optionally plot concentration ellipses; avPlot() and avPlots() invisibly return coordinates (suggested by Michael Friendly, with contributed code).
